2013-10-14  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_view.php: Made the SNMP trap viewer look
	  more like the event viewer.

2013-10-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/flot/pandora.flot.js,
	include/graphs/functions_flot.php, operation/agentes/stat_win.php:
	fixed the charts with negative values and a flot type.

2013-10-14  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/pt.po
	  include/languages/pt.mo
	  include/languages/pt_BR.po
	  include/languages/pt_BR.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/sk.po
	  include/languages/sk.mo
	  include/languages/tr.po
	  include/languages/tr.mo
	  include/languages/zh_CN.po
	  include/languages/zh_CN.mo
	  include/languages/zh_TW.po
	  include/languages/zh_TW.mo: Updated translations.

2013-10-13  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_commands.php, include/functions_io.php: Fixed
	that unexpected fields descriptions are set when multi-byte characters
	are entered.
	It is caused by json_encode(). It escapes unicode used by multi-byte
	characters. I've created io_json_mb_encode(), replacement of
	json_encode() for multi-byte characters.

2013-10-12  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_reporting_advanced_tab.php,
	include/help/ja/help_warning_status.php,